--- a/.github/workflows/electron-build.yml
+++ b/.github/workflows/electron-build.yml
@@ -5,9 +5,9 @@ on:
     branches:
       - development
     paths-ignore:
-      - '**.md'
-      - '.gitignore'
-      - 'docker/**'
+      - "**.md"
+      - ".gitignore"
+      - "docker/**"
   workflow_dispatch:
     inputs:
       build_type:
@@ -34,8 +34,8 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
-          cache: 'npm'
+          node-version: "20"
+          cache: "npm"
 
       - name: Install dependencies
         run: npm ci
@@ -77,8 +77,8 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
-          cache: 'npm'
+          node-version: "20"
+          cache: "npm"
 
       - name: Install dependencies
         run: npm ci
