--- a/.dockerignore
+++ b/.dockerignore
@@ -1,17 +1,20 @@
-# Git and version control
-.git
-.gitignore
-
-# Node.js
+# Dependencies
 node_modules
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Environment and configuration
-.env
-.env.*
-!.env.example
+# Build outputs
+dist
+build
+.next
+.nuxt
+
+# Development files
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # IDE and editor files
 .vscode
@@ -29,6 +32,28 @@ yarn-error.log*
 ehthumbs.db
 Thumbs.db
 
+# Git
+.git
+.gitignore
+
+# Documentation
+README.md
+README-CN.md
+CONTRIBUTING.md
+LICENSE
+
+# Docker files (avoid copying docker files into docker)
+docker/
+
+# Repository images
+repo-images/
+
+# Uploads directory
+uploads/
+
+# Fonts (Electron-only, not needed for Docker)
+public/fonts/
+
 # Logs
 logs
 *.log
@@ -42,66 +67,54 @@ pids
 # Coverage directory used by tools like istanbul
 coverage
 
-# Build directories (we build inside Docker)
-dist/
-build/
+# nyc test coverage
+.nyc_output
 
-# Temporary files
-tmp/
-temp/
+# Dependency directories
+jspm_packages/
 
-# SSL certificates (generated at runtime)
-ssl/
-*.crt
-*.key
-*.pem
+# Optional npm cache directory
+.npm
 
-# Database files (use volumes)
-*.sqlite
-*.db
-
-# Docker files (avoid recursion)
-Dockerfile*
-docker-compose*.yml
-.dockerignore
-
-# Documentation
-README*.md
-CONTRIBUTING.md
-LICENSE
-*.md
-
-# Repository images and assets (not needed in container)
-repo-images/
-
-# Testing
-test/
-tests/
-*.test.js
-*.spec.js
-
-# Uploads directory (use volumes)
-uploads/
-
-# Backup files
-*.bak
-*.backup
-*.old
-
-# Cache directories
-.cache/
-.npm/
-.yarn/
-
-# TypeScript build info
-*.tsbuildinfo
-
-# ESLint cache
+# Optional eslint cache
 .eslintcache
 
-# Prettier
-.prettierignore
-.prettierrc*
+# Microbundle cache
+.rpt2_cache/
+.rts2_cache_cjs/
+.rts2_cache_es/
+.rts2_cache_umd/
 
-# Local configuration
-.claude/
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# parcel-bundler cache (https://parceljs.org/)
+.cache
+.parcel-cache
+
+# next.js build output
+.next
+
+# nuxt.js build output
+.nuxt
+
+# vuepress build output
+.vuepress/dist
+
+# Serverless directories
+.serverless
+
+# FuseBox cache
+.fusebox/
+
+# DynamoDB Local files
+.dynamodb/
+
+# TernJS port file
+.tern-port
