--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -58,8 +58,8 @@ jobs:
             ${{ runner.os }}-buildx-${{ github.ref_name }}-
             ${{ runner.os }}-buildx-
 
-      - name: Login to Docker Registry
-        if: github.event.inputs.registry == 'dockerhub' || github.event_name == 'push'
+      - name: Login to GitHub Container Registry
+        if: github.event.inputs.registry != 'dockerhub'
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
@@ -70,7 +70,7 @@ jobs:
         if: github.event.inputs.registry == 'dockerhub'
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          username: ${{ github.repository_owner }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Determine Docker image tag
@@ -90,10 +90,10 @@ jobs:
           # Determine registry and image name
           if [ "${{ github.event.inputs.registry }}" == "dockerhub" ]; then
             echo "REGISTRY=docker.io" >> $GITHUB_ENV
-            echo "IMAGE_NAME=${{ secrets.DOCKERHUB_USERNAME }}/termix" >> $GITHUB_ENV
+            echo "IMAGE_NAME=$REPO_OWNER/termix" >> $GITHUB_ENV
           else
             echo "REGISTRY=ghcr.io" >> $GITHUB_ENV
-            echo "IMAGE_NAME=${{ env.REPO_OWNER }}/termix" >> $GITHUB_ENV
+            echo "IMAGE_NAME=$REPO_OWNER/termix" >> $GITHUB_ENV
           fi
 
       - name: Build and Push Multi-Arch Docker Image
@@ -120,7 +120,7 @@ jobs:
           mv /tmp/.buildx-cache-new /tmp/.buildx-cache
 
       - name: Delete all untagged image versions
-        if: success() && (github.event.inputs.registry != 'dockerhub' && github.event_name == 'push')
+        if: success() && github.event.inputs.registry != 'dockerhub'
         uses: quartx-analytics/ghcr-cleaner@v1
         with:
           owner-type: user
