--- a/docker/nginx-https.conf
+++ b/docker/nginx-https.conf
@@ -10,19 +10,16 @@ http {
     keepalive_timeout 65;
     client_header_timeout 300s;
 
-    # SSL Configuration
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-SHA256:ECDHE-RSA-AES256-SHA384;
     ssl_prefer_server_ciphers off;
     ssl_session_cache shared:SSL:10m;
     ssl_session_timeout 10m;
 
-    # HTTP Server - Redirect to HTTPS
     server {
         listen ${PORT};
         server_name _;
 
-        # Redirect all HTTP traffic to HTTPS
         return 301 https://$host:${SSL_PORT}$request_uri;
     }
 
@@ -31,11 +28,9 @@ http {
         listen ${SSL_PORT} ssl;
         server_name _;
 
-        # SSL Certificate paths
         ssl_certificate ${SSL_CERT_PATH};
         ssl_certificate_key ${SSL_KEY_PATH};
 
-        # Security headers for HTTPS
         add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
         add_header X-Frame-Options DENY always;
         add_header X-Content-Type-Options nosniff always;
@@ -118,35 +113,26 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        # WebSocket proxy for authenticated terminal connections
         location /ssh/websocket/ {
-            # Pass to WebSocket server with authentication support
             proxy_pass http://127.0.0.1:30002/;
             proxy_http_version 1.1;
 
-            # WebSocket upgrade headers
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
 
-            # Pass client information for authentication logging
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
 
-            # Query parameters are passed by default with proxy_pass
+            proxy_read_timeout 86400s;
+            proxy_send_timeout 86400s;
+            proxy_connect_timeout 10s;
 
-            # WebSocket timeouts (longer for terminal sessions)
-            proxy_read_timeout 86400s;  # 24 hours
-            proxy_send_timeout 86400s;  # 24 hours
-            proxy_connect_timeout 10s;  # Quick auth check
-
-            # Disable buffering for real-time terminal
             proxy_buffering off;
             proxy_request_buffering off;
 
-            # Handle connection errors gracefully
             proxy_next_upstream error timeout invalid_header http_500 http_502 http_503;
         }
 
