--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
     "clean": "npx prettier . --write",
     "dev": "vite",
     "dev:https": "cross-env VITE_HTTPS=true vite",
-    "build": "vite build",
-    "build:types": "tsc -p tsconfig.node.json",
-    "build:full": "npm run build && npm run build:types",
+    "build": "vite build && tsc -p tsconfig.node.json",
     "build:backend": "tsc -p tsconfig.node.json",
     "dev:backend": "tsc -p tsconfig.node.json && node ./dist/backend/backend/starter.js",
     "start": "npm run build:backend && node ./dist/backend/backend/starter.js",
