--- a/docker/nginx-https.conf
+++ b/docker/nginx-https.conf
@@ -41,6 +41,13 @@ http {
             index index.html index.htm;
         }
 
+        # Handle missing source map files gracefully
+        location ~* \.map$ {
+            return 404;
+            access_log off;
+            log_not_found off;
+        }
+
         location ~ ^/users(/.*)?$ {
             proxy_pass http://127.0.0.1:30001;
             proxy_http_version 1.1;
