--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -21,6 +21,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Fix rollup optional dependencies
+        run: npm install rollup --force
+
       - name: Run ESLint
         run: npx eslint .
 
