--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -16,15 +16,11 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "20"
-          cache: "npm"
 
       - name: Install dependencies
-        run: npm ci
-
-      - name: Fix optional dependencies
         run: |
-          npm install rollup --force
-          npm install lightningcss --force
+          rm -rf node_modules package-lock.json
+          npm install
 
       - name: Run ESLint
         run: npx eslint .
