--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-tooltip": "^1.2.8",
-    "@tailwindcss/vite": "^4.1.11",
+    "@tailwindcss/vite": "^4.1.14",
     "@types/bcryptjs": "^2.4.6",
     "@types/cookie-parser": "^1.4.9",
     "@types/jszip": "^3.4.0",
@@ -111,6 +111,7 @@
     "speakeasy": "^2.0.0",
     "ssh2": "^1.16.0",
     "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.14",
     "wait-on": "^9.0.1",
     "ws": "^8.18.3",
     "zod": "^4.0.5"
